fix: should not showing the heading progress bar when disable it in settings

--- a/styles.css
+++ b/styles.css
@@ -1745,6 +1745,11 @@ settings:
 	font-family: var(--font-interface);
 }
 
+.custom-format-placeholder-info {
+	margin-top: var(--size-4-2);
+	margin-bottom: var(--size-4-2);
+}
+
 .custom-format-preview-error,
 .expression-preview-error {
 	color: var(--text-error);
